# uptime-thing

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  config.example.json  config.example.yml
src/: checks.rs  main.rs
