[package]
name = "uptime-thing"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "^0.15"
duration-str = "^0.13"
log = { version = "^0.4", features = ["std"] }
pretty_env_logger = "^0.5"
reqwest = "^0.12"
serde = { version = "^1", features = ["alloc", "derive"] }
serde_yaml_ng = "^0.10"
tokio = { version = "^1", features = ["full"] }
